# Klip

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.py  build_config.py  build_exe.py  build_secure.py  config.json  create_portable_exe.py  diagnostico_ctrl1.py  install_service.py  main.py  notification.py  portable_config.json  pyproject.toml  requirements.txt  run_as_admin.bat  security.py  simple_selector.py  sql_snippets.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
assets/: README.md
core/: manager.py
ui/: overlay.py
